feat: Sharing components through a library - Toolbar

--- a/apps/client/src/app/app.component.html
+++ b/apps/client/src/app/app.component.html
@@ -1,4 +1,7 @@
-Eae men kk
+<fem-toolbar
+  (toggleSideNav)="toggleSideNav()"
+  (logout)="logout()"
+></fem-toolbar>
 
 <pre>
   <p>{{ widgets$ | async | json }}</p>
