--- a/apps/dashboard/src/app/app.component.html
+++ b/apps/dashboard/src/app/app.component.html
@@ -1,8 +1,7 @@
-<div style="text-align: center;">
-  <h1>Welcome to dashboard!</h1>
-  <img
-    width="450"
-    src="https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png"
-  />
-</div>
-<div>Message: {{ hello$ | async | json }}</div>
+<fem-toolbar
+  (toggleSideNav)="toggleSideNav()"
+  (logout)="logout()"
+></fem-toolbar>
+<mat-card *ngFor="let widget of widgets$ | async">
+  <p>{{ widget.title }}</p>
+</mat-card>
