--- a/apps/dashboard/src/app/app.component.html
+++ b/apps/dashboard/src/app/app.component.html
@@ -1,7 +1,31 @@
 <fem-toolbar
-  (toggleSideNav)="toggleSideNav()"
   (logout)="logout()"
+  (toggleSidenav)="toggleSideNav()"
 ></fem-toolbar>
-<mat-card *ngFor="let widget of widgets$ | async">
-  <p>{{ widget.title }}</p>
-</mat-card>
+
+<mat-sidenav-container>
+  <mat-sidenav #sidenav [opened]="true" mode="side" class="app-sidenav">
+    <ng-container>
+      <span class="logo">
+        <a [routerLink]="'/'">
+          <img src="assets/logo.png" alt="Logo" />
+        </a>
+      </span>
+      <mat-divider></mat-divider>
+      <mat-nav-list>
+        <mat-list-item
+          *ngFor="let link of links"
+          [routerLink]="link.path"
+          routerLinkActive="active"
+        >
+          <mat-icon matListIcon>{{ link.icon }}</mat-icon>
+          {{ link.title | uppercase }}
+        </mat-list-item>
+      </mat-nav-list>
+    </ng-container>
+  </mat-sidenav>
+
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
+</mat-sidenav-container>
