--- a/libs/ui-toolbar/src/lib/toolbar/toolbar/toolbar.component.html
+++ b/libs/ui-toolbar/src/lib/toolbar/toolbar/toolbar.component.html
@@ -1,7 +1,8 @@
-<mat-toolbar color="primary"
+<mat-toolbar color="primary" class="mat-elevation-z4"
   ><button mat-mini-fab color="basic" (click)="toggleSideNav.emit()">
     <mat-icon>menu</mat-icon>
   </button>
+  <span class="spacer"></span>
   <button mat-mini-fab color="basic" (click)="logout.emit()">
     <mat-icon>arrow_drop_down</mat-icon>
   </button>
